--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,10 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+.firebase/
+.firebaserc
+
+firebase.json
 
 # TypeScript v1 declaration files
 typings/
