--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
         "@babel/core": "^7.17.7",
         "@babel/preset-env": "^7.16.11",
         "@babel/preset-react": "^7.16.7",
+        "@fullpage/react-fullpage": "^0.1.22",
         "autoprefixer": "^10.4.2",
         "babel-loader": "^8.2.3",
         "bootstrap": "5.1.3",
         "core-js": "^3.21.1",
         "css-loader": "^6.7.1",
         "firebase": "^9.6.8",
+        "gsap": "^3.9.1",
         "html-webpack-plugin": "^5.5.0",
         "postcss": "^8.4.8",
         "postcss-loader": "^6.2.1",
